# langgraph-project-template

./: .env.example  .gitignore  Makefile  README.md  langgraph.json  pyproject.toml
notebooks/: exploration.ipynb
src/my_agent/: __init__.py  agent.py  config.py  state.py
src/my_agent/edges/: __init__.py  routing.py
src/my_agent/nodes/: __init__.py  executor.py  planner.py  reviewer.py
src/my_agent/prompts/: __init__.py  templates.py
src/my_agent/tools/: __init__.py  calculator.py  search.py
src/my_agent/utils/: __init__.py  helpers.py  llm.py  tracing.py
tests/: test_graph.py  test_nodes.py  test_tools.py
