[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-agent"
version = "0.1.0"
description = "A LangGraph agent project"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

# Optional extras — install what you need:
#   uv add langfuse      (Langfuse tracing)
[project.optional-dependencies]
langfuse = ["langfuse>=2.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "langgraph-cli[inmem]>=0.1",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
